load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

package(
    default_applicable_licenses = ["//third_party/rcat:license"],
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])

py_proto_library(
    name = "rcat_py_pb2",
    srcs = [
        "rcat.proto",
    ],
)
