package(default_visibility = ["//visibility:public"])

java_library(
    name = "error",
    srcs = [
        "RcatDecryptionException.java",
        "RcatEncryptionException.java",
        "RcatExpiredException.java",
        "RcatInvalidContentBindingException.java",
        "RcatIssuanceException.java",
        "RcatParsingException.java",
        "RcatSignatureValidationException.java",
        "RcatSigningException.java",
        "RcatUnknownIssuerIdException.java",
        "RcatVerificationException.java",
    ],
    deps = [],
)
